--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+img {
+	max-width: 100%;
+	height: auto;
+}
 .in, .out {
 	-webkit-animation-timing-function: ease-in-out;
 	-webkit-animation-duration: 400ms !important;
