--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ img {
 .fixed-text {
 	height: auto !important; /* !important is used to force override. */
 }
-.edit { margin-left: 5px; margin-right: 10px; }
+.edit { margin-left: 5px; margin-right: 10px; min-height: 150px; display: block; border:2px; }
 .center { text-align: center; }
 img.center { display: block; margin-left: auto; margin-right: auto; }
 .tasks { height: 100%; }
@@ -24,5 +24,47 @@ img.center { display: block; margin-left: auto; margin-right: auto; }
 
 .noStyle {
 	background-color: rgba(0, 0, 0, 0) !important;
-  border: none !important;
+    border: none !important;
 }
+
+.board {
+    background-color:  #464646;
+    height: 240px;
+    width: 240px;
+}
+
+.board tr {
+    height:60px;
+}
+
+.board td {
+    width: 60px;
+    position: relative;
+}
+
+.board td img {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* Emprunté de Jose Vargas à http://codeitdown.com/css-round-buttons/*/
+.round-button {
+    display:block;
+    width:50px;
+    height:50px;
+    line-height:50px;
+    border: 2px solid #f5f5f5;
+    border-radius: 50%;
+    color:#f5f5f5;
+    text-align:center;
+    text-decoration:none;
+    background: #464646;
+    box-shadow: 0 0 3px gray;
+    font-size:20px;
+    font-weight:bold;
+}
+.round-button:hover {
+    background: #262626;
+}
+/* Fin de l'emprunt*/
