--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ img {
 	height: auto !important; /* !important is used to force override. */
 }
 .animContent { min-width: 240px !important; }
-#quit, .dlt { background-color: #FF5F69 !important; text-shadow: none;}
+#quit, .dlt, #delAllBtn { background-color: #FF5F69 !important; text-shadow: none;}
 .edit { margin-left: 5px; margin-right: 10px; min-height: 150px; display: block; border:2px; }
 .center { text-align: center; }
 img.center, table.center, .round-button.center { display: block; margin-left: auto; margin-right: auto; }
@@ -24,7 +24,7 @@ img.center, table.center, .round-button.center { display: block; margin-left: au
 	transform: translateY(-50%);
 }
 
-#addButton { background-color: #34DD91; }
+#addButton, .js-anim { background-color: #34DD91 !important; text-shadow: none !important; }
 .noStyle {
 	background-color: rgba(0, 0, 0, 0) !important;
 	border: none !important;
