--- a/style.css
+++ b/style.css
@@ -6,10 +6,15 @@ img {
 	-webkit-animation-timing-function: ease-in-out;
 	-webkit-animation-duration: 400ms !important;
 }
+#decImg { max-height: 60px !important; }
+.big { margin-top: -1px !important; width: 50px !important; height: 133px !important; margin-bottom: 0px !important; }
+.header { background-color: #333 !important; }
+.header h1 { color: #FFF !important; text-shadow: none !important; }
 .fixed-text {
 	height: auto !important; /* !important is used to force override. */
 }
 .animContent { min-width: 240px !important; }
+#quit, .js-anim { border-color: #666 !important; }
 #quit, .dlt, #delAllBtn { background-color: #FF5F69 !important; text-shadow: none;}
 .edit { margin-left: 5px; margin-right: 10px; min-height: 150px; display: block; border:2px; }
 .center { text-align: center; }
@@ -28,6 +33,7 @@ img.center, table.center, .round-button.center { display: block; margin-left: au
 .noStyle {
 	background-color: rgba(0, 0, 0, 0) !important;
 	border: none !important;
+	padding: 0px !important;
 }
 
 .board {
